examples/test/testpolicy19125.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19125
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key35: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value9
          key7: value38
      podSelector:
        matchLabels:
          key23: value40
          key28: value7
